force-app/main/default/objects/MELtoDUB__c/MELtoDUB__c.object-meta.xml
<CustomObject>
    <label>MELtoDUB</label>
    <nameField>
        <label>MELtoDUB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>