force-app/main/default/objects/MELtoDUB__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <label>Airport</label>
    <length>4</length>
    <type>Text</type>
</CustomField>