force-app/main/default/objects/MELtoDUB__c/fields/Arrive_DUB__c.field-meta.xml
<CustomField>
    <fullName>Arrive_DUB__c</fullName>
    <label>Arrive DUB</label>
    <type>Date</type>
</CustomField>