force-app/main/default/objects/MELtoDUB__c/fields/Cheapest_Price__c.field-meta.xml
<CustomField>
    <fullName>Cheapest_Price__c</fullName>
    <label>Cheapest Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>