force-app/main/default/objects/MELtoDUB__c/fields/DEP_Layover_2__c.field-meta.xml
<CustomField>
    <fullName>DEP_Layover_2__c</fullName>
    <label>DEP Layover 2</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>