force-app/main/default/objects/MELtoDUB__c/fields/Depart_DEST__c.field-meta.xml
<CustomField>
    <fullName>Depart_DEST__c</fullName>
    <label>Depart DEST</label>
    <type>Date</type>
</CustomField>