force-app/main/default/objects/MELtoDUB__c/fields/Depart_DEST_Str__c.field-meta.xml
<CustomField>
    <fullName>Depart_DEST_Str__c</fullName>
    <label>Depart DEST Str</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>