force-app/main/default/objects/MELtoDUB__c/fields/Depart_DEST_Time__c.field-meta.xml
<CustomField>
    <fullName>Depart_DEST_Time__c</fullName>
    <label>Depart DEST Time</label>
    <type>Time</type>
</CustomField>