force-app/main/default/objects/MELtoDUB__c/fields/Depart_MEL__c.field-meta.xml
<CustomField>
    <fullName>Depart_MEL__c</fullName>
    <label>Depart MEL</label>
    <type>Date</type>
</CustomField>