force-app/main/default/objects/MELtoDUB__c/fields/Depart_MEL_Time__c.field-meta.xml
<CustomField>
    <fullName>Depart_MEL_Time__c</fullName>
    <label>Depart MEL Time</label>
    <type>Time</type>
</CustomField>