force-app/main/default/objects/MELtoDUB__c/fields/Depart_MEL_Time_Str__c.field-meta.xml
<CustomField>
    <fullName>Depart_MEL_Time_Str__c</fullName>
    <label>Depart MEL Time Str</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>