force-app/main/default/objects/MELtoDUB__c/fields/Flight_3__c.field-meta.xml
<CustomField>
    <fullName>Flight_3__c</fullName>
    <label>Flight 3</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>