force-app/main/default/objects/MELtoDUB__c/fields/Flight_URL__c.field-meta.xml
<CustomField>
    <fullName>Flight_URL__c</fullName>
    <label>Flight URL</label>
    <type>Url</type>
</CustomField>