force-app/main/default/objects/MELtoDUB__c/fields/Stopover_1__c.field-meta.xml
<CustomField>
    <fullName>Stopover_1__c</fullName>
    <label>Stopover 1</label>
    <length>4</length>
    <type>Text</type>
</CustomField>