force-app/main/default/objects/MELtoDUB__c/fields/Stopover_2__c.field-meta.xml
<CustomField>
    <fullName>Stopover_2__c</fullName>
    <label>Stopover 2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>