force-app/main/default/objects/MELtoDUB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cheapest_Price__c</columns>
    <columns>Airport__c</columns>
    <columns>Depart_DEST__c</columns>
    <columns>Depart_MEL__c</columns>
    <columns>Flight_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>